data/derived/comb/progs/unify/prog6614.ml.out
Characters 70-86:
  let r=(mulByDigit o p)+b in
        ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
